Fixing carrousel height on mobile

--- a/src/app/sections/home/news/news.component.scss
+++ b/src/app/sections/home/news/news.component.scss
@@ -300,7 +300,7 @@
 	border-left: solid white 6px;
 	border-radius:  0 35px 35px 0;
 	width: 330px;
-	height: auto;
+	height: 240px;
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
